FIX/src/client/sass/style.sass: fix padding for textarea (overlapping button)

--- a/App/src/client/sass/style.sass
+++ b/App/src/client/sass/style.sass
@@ -37,6 +37,7 @@ body
   textarea
     font-family: sans-serif
     padding: 30px
+    padding-right: 25vw
     background: #040404
     color: white
     font-size: 25px
